<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="31dp"
        android:layout_marginRight="16dp">

        <ImageButton
            android:id="@+id/close_dialog"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@null"
            android:contentDescription="@string/str_close_dialog_button_description"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_baseline_close_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/upload_photo_card"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:clickable="true"
            android:elevation="1dp"
            android:focusable="true"
            app:cardBackgroundColor="@color/off_white"
            app:cardCornerRadius="25dp"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/add_vehicle_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:contentDescription="@string/add_vehicle_photo_description"
                    android:scaleType="centerCrop" />

                <ImageView
                    android:id="@+id/upload_vehicle_photo_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:contentDescription="@string/add_vehicle_button_description"
                    android:elevation="2dp"
                    android:src="@drawable/ic_add"
                    app:tint="@color/black" />

                <TextView
                    android:id="@+id/vehicle_photo_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="40dp"
                    android:elevation="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/err_add_vehicle_photo"
                    android:textColor="@color/error_red"
                    android:textSize="14sp"
                    android:visibility="gone" />

            </FrameLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@+id/upload_photo_card">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_vehicle_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:hint="@string/add_vehicle_name">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/customTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusDown="@id/add_vehicle_model" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_vehicle_model"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:hint="@string/add_vehicle_model">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/customTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusDown="@id/add_vehicle_manufacturer" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_vehicle_manufacturer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:hint="@string/add_vehicle_manufacturer">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/customTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:nextFocusDown="@id/add_vehicle_engine_capacity" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_vehicle_engine_capacity"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:hint="@string/add_vehicle_engine_capacity"
                app:suffixText="@string/cubic_centimeters"
                app:suffixTextAppearance="@style/TextAppearance.App.Suffix"
                app:suffixTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/customTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789."
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:nextFocusDown="@id/add_vehicle_color" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_vehicle_color"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:hint="@string/add_vehicle_color">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/customTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:nextFocusDown="@id/add_vehicle_mileage" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_vehicle_mileage"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:hint="@string/add_vehicle_mileage"
                app:suffixText="km"
                app:suffixTextAppearance="@style/TextAppearance.App.Suffix">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/customTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789."
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:nextFocusDown="@id/add_vehicle_vin" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_vehicle_vin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/add_vehicle_vin"
            app:boxStrokeWidth="1dp"
            app:counterEnabled="true"
            app:counterMaxLength="17"
            app:counterTextColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/customTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/add_new_vehicle_btn"
            style="@style/padding_25_10_25_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/add_vehicle_save"
            android:theme="@style/DarkGreenRoundedButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_vehicle_vin" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>